dictionary-web-app: fix gap

--- a/dictionary-web-app/src/_app.scss
+++ b/dictionary-web-app/src/_app.scss
@@ -204,7 +204,7 @@ body {
     .item_wrapper{
       display:flex;
       flex-direction: column ;
-      gap: $space-8;
+      gap: $space-4;
 
       header {
         display: grid;
